# food-leftover-computer-vision

./: .gitignore  CMakeLists.txt  README.md  generalized_Hough_transform.cpp  k_means.cpp  object_extraction.cpp
data/: ground_truth.txt
src/: BoW.cpp  README.md  bow.cpp  bow.hpp  edge_detection.cpp  evaluation_metrics.cpp  evaluation_metrics.hpp  generalized_Hough_transform.cpp  main.cpp  segmentation.cpp  segmentation.hpp  segmentors.cpp  utils.cpp
src/utils/: prepare_bow_dict.py
